# ffms2

./: .gitignore  CMakeLists.txt  Makefile.am.cmake  README.md  ffms2Config.cmake
cmake/: FFmpegAdditionalChecks.cmake  FindFFMPEG.cmake
src/: CMakeLists.txt
src/avisynth/: CMakeLists.txt  avisynth.cpp
src/avxsynth/: Makefile  avssources_avx.cpp  avssources_avx.h  avxffms2.cpp  ffpp_avx.cpp  ffpp_avx.h  ffswscale_avx.cpp
src/avxsynth/include/: avxplugin.h
src/avxsynth/include/common/windowsPorts/: MMRegLinux.h  UnknwnLinux.h  WinGDILinux.h  basicDataTypeConversions.h  windows2linux.h
src/core/: CMakeLists.txt
src/index/: CMakeLists.txt
src/vapoursynth/: CMakeLists.txt
